# Blinky

./: .env_example  .envexample  .gitignore  README.md  branch-plan.txt  branch_meta.txt  docker-compose.yml  package-lock.json  package.json  requirements.txt  test_computer_use.py
.wwebjs_cache/: 2.3000.1042119269.html
ai/: 00_repo_summary.md  01_architecture.md  02_coordinate_scaling.md  03_matching_heuristics.md  04_ai_inference.md  06_detailed_summaries.md  07_agent_router.md  08_mobile_remote.md  architecture.md  detailed_summaries.md  files_index.json  repo_summary.md
common/: .envexample  .gitignore  README.md  docker-compose.yml  test_sarvam_ws.py
common/ai/: 00_repo_summary.md  01_architecture.md  02_coordinate_scaling.md  03_matching_heuristics.md  04_ai_inference.md  05_sarvam.md  06_detailed_summaries.md  bugs.md  (+1 more)
common/src-tauri/: Cargo.toml  hooks.nsi  tauri.conf.json
common/src-tauri/capabilities/: default.json
common/src-tauri/icons/: icon.icns
common/src-tauri/src/: lib.rs  mcp_bridge.rs  websocket.rs
common/src-tauri/src/platform/: mod.rs
data/: sessions.json
frontend/: index.html  vite.config.ts
linux/: quick_start.md  requirements.txt
mobile/: App.tsx  README.md  package-lock.json  package.json  usePCWebSocket.ts
python/: agent_router.py  main.py  test_wake_word.py  wake_word.py
scripts/: setup-python.ps1
shared/: clicky-result.schema.json  example-result.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  websocket.rs
windows/: requirements.txt
(+194 files in other folders)
