[package]
name = "clicky"
version = "0.1.0"
description = "Clicky AI desktop tutor"
authors = ["Clicky Team"]
edition = "2021"

[lib]
name = "clicky_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.1", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2.2"
tauri-plugin-shell = "2.2"
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }
