[package]
name = "blinky"
version = "0.1.0"
description = "Blinky AI desktop tutor"
authors = ["Blinky Team"]
edition = "2021"

[lib]
name = "blinky_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.1", features = [] }

[dependencies]
futures-util = "0.3.32"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2.2"
tauri-plugin-shell = "2.2"
tokio = { version = "1.52.3", features = ["full"] }
tokio-tungstenite = { version = "0.29.0", features = ["native-tls"] }
[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging"] }
